# flight-recorder-rust

./: .editorconfig  .eslintrc.yml  docker-compose.yaml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
grafana/: flight_dashboard.json  influxdb.yml
src/: App.tsx  main.tsx  theme.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/migration/src/: lib.rs
src-tauri/src/: cmd.rs  database.rs  flight_instrumentation.rs  flight_recorder.rs  main.rs  model.rs  state.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/database/entities/: flight_data.rs  flights.rs  mod.rs  prelude.rs
src-tauri/src/database/migrations/: m20240320_000001_create_table.rs  m20260125_000001_add_aircraft_model.rs  m20260322_000001_create_flight_data.rs  m20260322_000002_add_flight_dynamics.rs  m20260425_000001_add_fuel_data.rs  m20260425_000002_add_flaps_data.rs  mod.rs
src-tauri/src/database/repositories/: flight_repository.rs  mod.rs
src-tauri/src/entities/: mod.rs
src-tauri/src/instrumentation/: flight_instrumentation.rs  flight_recorder.rs  mod.rs
src-tauri/src/repositories/: flight_repository.rs  mod.rs
src/bindings/: ErrorModel.ts  Flight.ts  FlightData.ts
src/commands/: index.ts
src/components/: AvatarWithStatus.tsx  BlurContainer.tsx  ChatBubble.tsx  ChatListItem.tsx  ChatsPane.tsx  ColorSchemeToggle.tsx  FlightDetails.tsx  FlightListItem.tsx  FlightMenu.tsx  FlightsPane.tsx  Header.tsx  MapView.tsx  MessageInput.tsx  MessagesPane.tsx  MessagesPaneHeader.tsx  MyFlights.tsx  MyMessages.tsx  PlaneIcon.ts  SideBar.tsx  Status.tsx
src/components/flight/: FlightCharts.tsx  FlightDetails.tsx  FlightMenu.tsx
src/components/flight/charts/: FuelChart.tsx  MainChart.tsx  utils.ts
src/components/map/: MapControls.tsx  MapView.tsx
src/components/settings/: FuelUnitSelector.tsx
src/context/: FlightStoreContext.tsx
src/hooks/: useFlightEndedEvent.ts  useFlightPath.ts  useFlightPosition.ts  useFlightStoreSelector.ts  useGetFlightData.ts  usePlanePosition.ts  useTauriListen.ts
src/state/: flights.ts
src/store/: flightDataStore.ts  flightStore.ts
src/tauri/: react.ts
src/types/: fuelUnit.ts
