[package]
name = "flight-recorder-rust"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simconnect-sdk = { version = "0.2.2", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.37"
num-traits = "0.2.18"
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
ts-rs = "10.1.0"
sea-orm-migration = "1.1.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tauri-plugin-shell = "2.2.1"
uuid = { version = "1.16.0", features = ["v4"] }
tokio-cron-scheduler = "0.13.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
