[package]
name = "flight-recorder-rust"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simconnect-sdk = { version = "0.2.2", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.41"
num-traits = "0.2.19"
sea-orm = { version = "1.1.10", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.1.10"
ts-rs = "11.0.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tauri-plugin-shell = "2.3.0"
uuid = { version = "1.18.0", features = ["v4"] }
tokio-cron-scheduler = "0.14.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
