[package]
name = "flight-recorder-rust"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simconnect-sdk = { version = "0.2.2", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.43"
num-traits = "0.2.19"
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.1.14"
ts-rs = "11.1.0"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
tauri-plugin-shell = "2.3.4"
uuid = { version = "1.19.0", features = ["v4"] }
tokio-cron-scheduler = "0.15.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
